[package]
name = "mdr"
version = "0.1.0"
edition = "2018"

[dependencies]
base64 = "0.13"
chrono = "0.4"
clap = "2.33"
deunicode = "1.3"
dotenv = "0.15"
lol_html = "0.3"
once_cell = "1.8"
pulldown-cmark = "0.8"
sha2 = "0.9"
syntect = { version = "4.6", default-features = false, features = ["default-fancy"]}
thiserror = "1.0"
xml-rs = "0.8"
