[package]
name = "mdr"
version = "0.1.0"
edition = "2021"

# optimize for small code size
[profile.release]
opt-level = "s"
lto = true

[dependencies]
base64 = "0.13"
chrono = "0.4"
clap = "2.33"
deunicode = "1.3"
dotenv = "0.15"
log = "0.4"
lol_html = "0.3"
once_cell = "1.8"
pretty_env_logger = "0.4"
pulldown-cmark = "0.8"
sha2 = "0.9"
thiserror = "1.0"
# tree-sitter-bash = { version = "0.20", git = "https://github.com/rkusa/tree-sitter-bash.git", branch = "0.20.0" }
tree-sitter-bash = { version = "0.20", path = "/Users/markus/Downloads/tree-sitter-bash" }
tree-sitter-highlight = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-rust = { version = "0.20", git = "https://github.com/Luni-4/tree-sitter-rust.git", branch = "update-0.20" }
tree-sitter-typescript = "0.20"
xml-rs = "0.8"
